js262/test/language/module-code/parse-err-decl-pos-import-if-else.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

if (true) { } else import v from './decl-pos-import-if-else.js';
